# salt

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  ReadMe.md
.github/workflows/: master.yml
example/: CMakeLists.txt  tcp_echo_client.cpp  tcp_echo_server.cpp
example/echo/: CMakeLists.txt  tcp_echo_client.cpp  tcp_echo_server.cpp
example/message/: CMakeLists.txt  tcp_message_client.cpp  tcp_message_unify_client.cpp
example/util/: string_util.h
src/: CMakeLists.txt  Config.cmake.in  Doxyfile  Doxyfile.in  mainpage.md
src/salt/: asio_io_context_thread.cpp  asio_io_context_thread.h  connection_handle.h  error.cpp  error.h  log.h  packet_assemble.h  salt.cpp  shared_asio_io_context_thread.cpp  shared_asio_io_context_thread.h  tcp_client.cpp  tcp_client.h  tcp_connection.cpp  tcp_connection.h  tcp_connection_handle.cpp  tcp_connection_handle.h  tcp_server.cpp  tcp_server.h  tcp_server_test.cpp  version.h.in
src/salt/core/: asio_io_context_thread.cpp  asio_io_context_thread.h  connection_handle.h  error.cpp  error.h  log.h  shared_asio_io_context_thread.cpp  tcp_client.cpp  tcp_client.h  tcp_connection.cpp  tcp_connection.h  tcp_connection_handle.cpp  tcp_connection_handle.h  tcp_server.cpp  tcp_server.h
src/salt/detail/: tcp_client_detail.h
src/salt/packet_assemble/: assemble_conf.h  header_body_assemble.h  header_body_unify_assemble.h  packet_assemble.h
src/salt/util/: byte_order.h  call_back_wrapper.h
test/: CMakeLists.txt  error_code_test.cpp  header_body_assemble_test.cpp  header_body_unify_assemble_test.cpp  tcp_client_test.cpp
